--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,11 @@ on:
       - dev
 jobs:
   test:
-    environment: testing
+    env:
+      MONGODB_CLUSTER_ADDRESS: ${{secret.MONGODB_CLUSTER_ADDRESS}}
+      MONGODB_USERNAME: ${{secret.MONGODB_USERNAME}}
+      MONGODB_PASSWORD: ${{secret.MONGODB_PASSWORD}}
+      PORT: ${{secret.PORT}}
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
@@ -19,15 +23,16 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run server
-        run: npm start & npx wait-on http://127.0.0.1:XYZ
+        run: npm start & npx wait-on http://127.0.0.1:$PORT
       - name: Run tests
         run: npm test
       - name: Output information
-        run: echo "..."
+        run: echo "MONGODB_USERNAME" $MONGODB_USERNAME
   deploy:
     needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Output information
-        run: |        
-          echo "..."
+        run: |
+          echo "MONGODB_USERNAME" $MONGODB_USERNAME
+          echo "MONGODB_DB_NAME" $MONGODB_DB_NAME
