--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,10 @@ jobs:
         run: npm ci
       - name: Run server
         run: npm start & npx wait-on http://127.0.0.1:${{env.PORT}}
+      - name: Output information
+        run: |
+          echo "MONGODB_USERNAME" $MONGODB_USERNAME
+          echo "MONGODB_DB_NAME" $MONGODB_DB_NAME
       - name: Run tests
         run: npm test
       - name: Output information
