--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,9 +8,10 @@ jobs:
   test:
     env:
       MONGODB_CLUSTER_ADDRESS: ${{vars.MONGODB_CLUSTER_ADDRESS}}
-      MONGODB_USERNAME: ${{vars.MONGODB_USERNAME}}
-      MONGODB_PASSWORD: ${{vars.MONGODB_PASSWORD}}
-      PORT: 8080
+      MONGODB_USERNAME: ${{secret.MONGODB_USERNAME}}
+      MONGODB_PASSWORD: ${{secret.MONGODB_PASSWORD}}
+      MONGODB_DB_NAME: ${{vars.MONGODB_DB_NAME}}
+      PORT: ${{vars.PORT}}
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
