--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,13 +26,12 @@ jobs:
       - name: Output information
         run: |
           echo "MONGODB_USERNAME" ${{env.MONGODB_USERNAME}}
+          echo "MONGODB_CLUSTER_ADDRESS" ${{env.MONGODB_CLUSTER_ADDRESS}}
           echo "MONGODB_DB_NAME" ${{env.MONGODB_DB_NAME}}
       - name: Run server
         run: npm start & npx wait-on http://127.0.0.1:${{env.PORT}}
       - name: Run tests
         run: npm test
-      - name: Output information
-        run: echo "MONGODB_USERNAME" $MONGODB_USERNAME
   deploy:
     needs: test
     runs-on: ubuntu-latest
