--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,8 +8,8 @@ jobs:
   test:
     env:
       MONGODB_CLUSTER_ADDRESS: ${{vars.MONGODB_CLUSTER_ADDRESS}}
-      MONGODB_USERNAME: ${{secrets.MONGODB_USERNAME}}
-      MONGODB_PASSWORD: ${{secrets.MONGODB_PASSWORD}}
+      MONGODB_USERNAME: ${{vars.MONGODB_USERNAME}}
+      MONGODB_PASSWORD: ${{vars.MONGODB_PASSWORD}}
       MONGODB_DB_NAME: ${{vars.MONGODB_DB_NAME}}
       PORT: ${{vars.PORT}}
     runs-on: ubuntu-latest
